[package]
name = "memory-monitor-cli"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for monitoring system memory usage with visual display"
license = "MIT"
repository = "https://github.com/enomoto11/memory-monitor-cli"
keywords = ["memory", "monitoring", "cli", "system"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.29"
colored = "2.0"